# Vakya

./: .env  .gitignore  README.md  package-lock.json  package.json  project_knowledge_base.md  pyproject.toml  requirements.txt  vite.config.ts
.github/workflows/: deploy.yml
Vakya/backend/: graph.py
Vakya/backend/stage1_ingestion/: ocr_engine.py
Vakya/backend/stage2_intelligence/: clause_agent.py  risk_agent.py
Vakya/backend/stage3_reporting/: final_output_layer.py
Vakya/backend/utils/: llm_helper.py
Vakya/data/: generate_pdf.py  sample_audit_report.docx
backend/: db.py  graph.py  main.py  test_db.py
backend/data/reports/: final_report.docx
backend/stage1_ingestion/: doc_intelligence.py  ocr_engine.py  segmentation_engine.py  upload_layer.py
backend/stage2_intelligence/: chat_agent.py  clause_agent.py  compliance_agent.py  negotiation_agent.py  risk_agent.py
backend/stage3_reporting/: final_output_layer.py  report_agent.py
backend/utils/: llm_helper.py
data/: generate_pdf.py
frontend/: .gitignore  index.html  package-lock.json  package.json  test_api.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ContractChat.css  ContractChat.tsx  HowItWorks.css  HowItWorks.tsx  Layout.css  Layout.tsx  Y2KHero.css  Y2KHero.tsx
frontend/src/context/: AppContext.tsx
frontend/src/pages/: Landing.css  (+14 more)
src/: App.tsx  index.css
src/components/: HowItWorks.tsx  Layout.css  Layout.tsx  Y2KHero.tsx
src/pages/: Analysis.tsx  Dashboard.tsx  Landing.css  Landing.tsx  Report.tsx  Upload.tsx
(+13 files in other folders)
