[project]
name = "vakya-backend"
version = "0.1.0"
description = "Vakya Backend FastAPI"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "langgraph",
    "langchain-community",
    "langchain-core",
    "langchain-google-genai",
    "google-genai",
    "PyMuPDF",
    "pillow",
    "python-docx",
    "langdetect"
]

[tool.vercel]
entrypoint = "backend.main:app"
